--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.spinn3r</groupId>
-    <artifactId>alt-log5j</artifactId>
-    <version>2.1.7</version>
+    <artifactId>log6j</artifactId>
+    <version>2.2.0</version>
 
     <build>
         <sourceDirectory>src/java</sourceDirectory>
